fix(InteractiveMap): Avoid too much width on mobile

--- a/components/InteractiveMap/InteractiveMap.module.css
+++ b/components/InteractiveMap/InteractiveMap.module.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
     justify-content: center;
+    align-items: center;
 
     position: relative;
 
@@ -8,15 +9,12 @@
 }
 
 .container img {
-    display: block;
     width: 500px;
     height: 500px;
 }
 
 .map {
-    display: block;
     position: relative;
-
     width: min-content;
 }
 
@@ -58,7 +56,7 @@
     left: 28%;
 }
 
-.container .infoBox {
+.infoBox {
     padding: 15px;
     width: 35vw;
 
@@ -80,11 +78,12 @@
         flex-direction: column;
     }
 
-    .map, .infoBox {
-        margin: auto;
+    .map img {
+        width: 80vw;
+        height: 80vw;
     }
 
-    .container .infoBox {
+    .infoBox {
         width: 80vw;
     }
 }
